--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
      <!-- First Navbar -->
-<nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
+<nav class="navbar navbar-light bg-info text-dark fixed-top first-navbar">
     <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
     <span class="navbar-brand mx-auto text-dark">Imam&nbsp;&nbsp;Hafsin</span>
     <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
@@ -18,7 +18,7 @@
   </nav>
   
   <!-- Second Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-white text-dark second-navbar">
     <div class="navbar-toggler" type="button" onclick="toggleNavbar()">
         <span class="navbar-toggler-icon"></span>
     </div>
@@ -55,7 +55,7 @@
         <div class="carousel-item active">
             <img src="students.jfif" class="d-block w-100" alt="School Image 1">
             <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
-                <h5 class="text-white bg-info">Welcome to Imam Hafsin Model International School</h5>
+                <h2>Imam Hafsin Model International School</h2>
                 <p class="text-light bg-transparent px-3 py-2">
                     Imam Hafsin Model International School provides quality education across three distinct sections: Western Education, Islamiyya, and Tahfizz. 
                     With dedicated directors leading each section, our mission is to nurture future leaders through a blend of modern and traditional learning.
@@ -66,7 +66,7 @@
         <div class="carousel-item">
             <img src="students.jfif" class="d-block w-100" alt="Western Education Image">
             <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
-                <h5 class="text-white bg-info">Western Education Section</h5>
+                <h2>Western Education Section</h2>
                 <p class="text-light bg-transparent px-3 py-2">
                     Empowering students with modern education and life skills under the guidance of Mr. Muhammad Auwal 
                 </p>
@@ -76,7 +76,7 @@
         <div class="carousel-item">
             <img src="team.jfif" class="d-block w-100" alt="School Image 2">
             <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
-                <h5 class="text-white bg-info">Islamiyya Section</h5>
+                <h2>Islamiyya Section</h2>
                 <p class="text-light bg-transparent px-3 py-2">
                     Building a strong foundation in Islamic studies under the guidance of Mal. Usman Said
                 </p>
@@ -86,7 +86,7 @@
         <div class="carousel-item">
             <img src="students.jfif" class="d-block w-100" alt="School Image 3">
             <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
-                <h5 class="text-white bg-info">Tahfizz Section</h5>
+                <h2>Tahfizz Section</h2>
                 <p class="text-light bg-transparent px-3 py-2">
                     Focusing on the memorization of the Holy Quran with leadership from Mal. Salihu Hashim
                 </p>
@@ -95,79 +95,137 @@
     </div>
 </div>
 
+<section id="who-we-are" class="containers text-center mt-3">
+    <h2 class="text-info text-center bg-light  py-1">Who We Are</h2>
+    <p>Imam Hafsin Model International School is a distinguished institution dedicated to academic excellence and moral upbringing. Our school integrates Western education, Islamic studies, and Quranic memorization to provide a well-rounded learning experience for students, nurturing them into future leaders with strong ethical values.</p>
+</section>
 
+<section id="what-we-do" class="container-fluid bg-light text-center mt-3">
+    <h2  class="text-info  text-center bg-light py-1" >What We Do</h2>
+    <p>We provide a holistic education system that combines modern knowledge with religious teachings. Our school is structured into three main sections: Western Education, Islamiyya, and Tahfizz. Each section is led by dedicated professionals who ensure that students receive quality education, character development, and spiritual guidance.</p>
+</section>
 
-    <!-- Directors Section -->
-    <div class="director-container mt-5">
-        <h3 class="text-center text-info bg-light">Meet Our Directors</h3>
-        <div class="row text-center">
-            <div class="col-md-4">
-                <img src="auwal1.jfif" alt="Mr. Auwal Muhammad" class="director-img">
-                <h5>Mr. Muhammad Auwal </h5>
-                <p>Director, Western Education Section</p>
-            </div>
-            <div class="col-md-4">
-                <img src="shamsu.jpg" alt="Mal. Usman" class="director-img">
-                <h5>Mal. Usman Said</h5>
-                <p>Director, Islamiyya Section</p>
-            </div>
-            <div class="col-md-4">
-                <img src="passport.jpg" alt="Mal. Salihu" class="director-img">
-                <h5>Mal. Salihu Hashim</h5>
-                <p>Director, Tahfizz Section</p>
-            </div>
+<section id="mission-vision" class="containers text-center mt-3">
+    <div>
+        <h3 class="text-info  text-center bg-light py-1">Our Mission</h3>
+        <p>Our mission is to provide an education that balances academic excellence with Islamic values. We strive to develop responsible and knowledgeable individuals who are equipped with the skills and moral compass necessary to succeed in life and contribute positively to society.</p>
+    </div>
+    <div class="bg-light container-fluid">
+        <h3  class="text-info  text-center bg-light py-1">Our Vision</h3>
+        <p>We envision a future where students from Imam Hafsin Model International School emerge as confident, educated, and God-fearing individuals, capable of leading and serving their communities with wisdom, integrity, and compassion.</p>
+    </div>
+</section>
+
+<!-- Key Personnel Section -->
+<div class="director-container mt-5 container-fluid">
+    <h3 class="text-center text-info bg-light py-2 rounded mb-4">Key Personnel</h3>
+    <div class="row text-center">
+        <div class="col-md-3 mb-4">
+            <img src="auwal1.jfif" alt="Mr. Auwal Muhammad" class="director-img rounded-circle mb-3">
+            <h5 class="text-dark font-weight-bold">Mr. Muhammad Auwal</h5>
+            <p class="text-muted">Director, Western Education Section</p>
+        </div>
+        <div class="col-md-3 mb-4">
+            <img src="shamsu.jpg" alt="Mal. Usman" class="director-img rounded-circle mb-3">
+            <h5 class="text-dark font-weight-bold">Mal. Usman Said</h5>
+            <p class="text-muted">Director, Islamiyya Section</p>
+        </div>
+        <div class="col-md-3 mb-4">
+            <img src="passport.jpg" alt="Mal. Salihu" class="director-img rounded-circle mb-3">
+            <h5 class="text-dark font-weight-bold">Mal. Salihu Hashim</h5>
+            <p class="text-muted">Director, Tahfizz Section</p>
+        </div>
+        <div class="col-md-3 mb-4">
+            <img src="auwal1.jfif" alt="Mal. Salihu" class="director-img rounded-circle mb-3">
+            <h5 class="text-dark font-weight-bold">Mal. Liman</h5>
+            <p class="text-muted">Student Affairs</p>
         </div>
     </div>
+</div>
+
 
     <!-- News and Feeds -->
     <div class="news-section text-center mt-5">
         <h3 class=" text-info bg-light ">News and Feeds</h3>
         <ul>
-            <li class="bg-light">Upcoming PTA meeting scheduled for December 15 January, 2025.</li>
+            <li class="bg-light">Upcoming PTA meeting scheduled for December 7 May, 2025.</li>
             <li>Congratulations to our Tahfizz students on completing their Quran memorization.</li>
             <li class="bg-light">Western Education Section announces the opening of new science labs.</li>
         </ul>
     </div>
-<!-- Footer -->
-<div class="footer bg-light mt-5">
-    <div class="row text-center py-3">
-        <div class="col-md-4">
-            <p><strong>Imam Hafsin Model International School</strong></p>
-            <p>No.60 Sani Yakasai Street</p>
-            <p>Tal'udu G/Kaya, Gwale LGA</p>
-            <p>Kano State</p>
-            <p>
-              <i class="fas fa-envelope"></i> 
-              <a href="mailto:imamhafsin@gmail.com">imamhafsin@gmail.com</a>
-            </p>
-            <p>
-              <i class="fas fa-phone"></i> 
-              <a href="tel:08142458654">08142458654</a>
-            </p>
-          </div>
-      <div class="col-md-4">
-        <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="d-block mb-2">
-          <i class="fab fa-facebook"></i> Facebook
-        </a>
-        <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="d-block mb-2">
-          <i class="fab fa-instagram"></i> Instagram
-        </a>
-        <a href="https://twitter.com/prof_johndoe" target="_blank" class="d-block mb-2">
-          <i class="fab fa-twitter"></i> Twitter
-        </a>
-        <a href="https://wa.me/1234567890" target="_blank" class="d-block mb-2">
-          <i class="fab fa-whatsapp"></i> WhatsApp
-        </a>
-      </div>
-      <div class="col-md-4">
-        <p>&copy; IHMIS & SAFS Technologies 2025</p>
-        <p>All rights reserved.</p>
-      </div>
+     <!-- Contact Form Section -->
+     <div class="container-fluid">
+        <h2 class="text-white text-center bg-info">Get in Touch</h2>
+        <form id="contactForm" method="POST" action="/send-message">
+            <div class="mb-3">
+                <label for="name" class="form-label">Name</label>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Your Full Name" required>
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="Your Email" required>
+            </div>
+            <div class="mb-3">
+                <label for="message" class="form-label">Message</label>
+                <textarea class="form-control" id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
+            </div>
+            <div class="text-center">
+                <button type="submit" class="btn btn-success">Submit</button>
+            </div>
+        </form>
     </div>
-  </div>
-  <!-- Back to top button -->
-  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
-  
+</div>
+</div>
+
+<!-- Footer -->
+<footer class="footer bg-info text-dark mt-5 py-3">
+    <div class="container">
+        <div class="text-center mb-2">
+            <h6 class="mb-1">Dedicated to Excellence in Education</h6>
+            <p class="small mb-2">Join us in providing quality education that shapes tomorrow's leaders.</p>
+        </div>
+    </div>
+
+    <div class="row text-center">
+        <div class="col-md-4">
+            <h6 class="mb-1">Call Us</h6>
+            <p class="small mb-0"><i class="fas fa-phone"></i> <a href="tel:08142458654">08142458654</a></p>
+        </div>
+        <div class="col-md-4">
+            <h6 class="mb-1">Email Us</h6>
+            <p class="small mb-0"><i class="fas fa-envelope"></i> <a href="mailto:imamhafsin@gmail.com">imamhafsin@gmail.com</a></p>
+        </div>
+        <div class="col-md-4">
+            <h6 class="mb-1">Visit Us</h6>
+            <p class="small mb-0">Imam Hafsin Model International School</p>
+            <p class="small mb-0">No.60 Sani Yakasai Street, Tal'udu G/Kaya, Gwale LGA</p>
+            <p class="small mb-0">Kano State, Nigeria</p>
+        </div>
+    </div>
+
+    <div class="social-icons text-center mt-2">
+        <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="text-dark me-2" aria-label="Facebook">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="text-dark me-2" aria-label="Instagram">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://twitter.com/prof_johndoe" target="_blank" class="text-dark me-2" aria-label="Twitter">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://wa.me/1234567890" target="_blank" class="text-dark" aria-label="WhatsApp">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </div>
+
+    <div class="text-center mt-2">
+        <p class="small mb-0">&copy; IHMIS & SAFS Technologies 2025. All rights reserved.</p>
+    </div>
+
+    <!-- Back to top button -->
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
+</footer>
+
   
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
