--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <title> imam Hafsin Model International School</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
      <!-- First Navbar -->
 <nav class="navbar navbar-light bg-info text-dark fixed-top first-navbar">
     <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
-    <span class="navbar-brand mx-auto text-dark">Imam&nbsp;&nbsp;Hafsin</span>
+    <span class="navbar-brand-name text-white">IMAM HAFSIN</span>
     <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
     <!--RC:1320997-->
   </nav>
@@ -55,41 +56,41 @@
         <div class="carousel-item active">
             <img src="students.jfif" class="d-block w-100" alt="School Image 1">
             <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
-                <h2>Imam Hafsin Model International School</h2>
+                <h5>IMAM HAFSIN MODEL INTERNATIONAL SCHOOL</h5>
                 <p class="text-light bg-transparent px-3 py-2">
-                    Imam Hafsin Model International School provides quality education across three distinct sections: Western Education, Islamiyya, and Tahfizz. 
-                    With dedicated directors leading each section, our mission is to nurture future leaders through a blend of modern and traditional learning.
+                    Imam Hafsin Model International School offers quality education in Western Education, Islamiyya, and Tahfizz, guided by experienced directors. Our mission is to nurture future leaders through a balance of modern and traditional learning.
                 </p>
+                
             </div>
         </div>
         <!-- Second Slide for Western Education -->
         <div class="carousel-item">
             <img src="students.jfif" class="d-block w-100" alt="Western Education Image">
             <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
-                <h2>Western Education Section</h2>
+                <h5>WESTERN EDUCATION</h5>
                 <p class="text-light bg-transparent px-3 py-2">
-                    Empowering students with modern education and life skills under the guidance of Mr. Muhammad Auwal 
-                </p>
+                    Committed to shaping well-rounded individuals, we provide students with a blend of modern education and essential life skills. Through a supportive environment, we aim to nurture their intellectual, personal, and social growth, preparing them to succeed in a dynamic world.
+                </p>                
             </div>
         </div>
         <!-- Third Slide for Islamiyya -->
         <div class="carousel-item">
             <img src="team.jfif" class="d-block w-100" alt="School Image 2">
             <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
-                <h2>Islamiyya Section</h2>
+                <h2>ISLAMIYYAH</h2>
                 <p class="text-light bg-transparent px-3 py-2">
-                    Building a strong foundation in Islamic studies under the guidance of Mal. Usman Said
-                </p>
+                    Providing a solid foundation in Islamic studies, we focus on nurturing spiritual growth, ethical values, and deep understanding of religious principles. Our approach combines traditional teachings with modern methods to inspire a lifelong commitment to faith and moral excellence.
+                </p>                
             </div>
         </div>
         <!-- Fourth Slide for Tahfizz -->
         <div class="carousel-item">
             <img src="students.jfif" class="d-block w-100" alt="School Image 3">
             <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
-                <h2>Tahfizz Section</h2>
+                <h2>TAHFIZ</h2>
                 <p class="text-light bg-transparent px-3 py-2">
-                    Focusing on the memorization of the Holy Quran with leadership from Mal. Salihu Hashim
-                </p>
+                    Our Tahfizz section is dedicated to the memorization and recitation of the Holy Quran. Students in this program are provided with a structured and supportive environment to help them memorize the Quran and build a strong foundation in Islamic teachings. The program is designed to nurture spiritual growth and instill a deep understanding of the Quranic teachings, ensuring that each student has the tools to become a hafiz in the future.
+                </p>                
             </div>
         </div>
     </div>
@@ -189,17 +190,17 @@
     <div class="row text-center">
         <div class="col-md-4">
             <h6 class="mb-1">Call Us</h6>
-            <p class="small mb-0"><i class="fas fa-phone"></i> <a href="tel:08142458654">08142458654</a></p>
+            <p class="small mb-0"><i class="fas fa-phone"></i> <a href="tel:08142458654" class="text-light">08142458654</a></p>
         </div>
         <div class="col-md-4">
             <h6 class="mb-1">Email Us</h6>
-            <p class="small mb-0"><i class="fas fa-envelope"></i> <a href="mailto:imamhafsin@gmail.com">imamhafsin@gmail.com</a></p>
+            <p class="small mb-0 text-dark"><i class="fas fa-envelope"></i> <a href="mailto:info@imamhafsin.com.ng" class="text-light">info@imamhafsin.com.ng</a></p>
         </div>
         <div class="col-md-4">
             <h6 class="mb-1">Visit Us</h6>
-            <p class="small mb-0">Imam Hafsin Model International School</p>
-            <p class="small mb-0">No.60 Sani Yakasai Street, Tal'udu G/Kaya, Gwale LGA</p>
-            <p class="small mb-0">Kano State, Nigeria</p>
+            <p class="small mb-0 text-white">Imam Hafsin Model International School</p>
+            <p class="small mb-0 text-white">No.60 Sani Yakasai Street, Tal'udu G/Kaya, Gwale LGA</p>
+            <p class="small mb-0 text-white">Kano State, Nigeria</p>
         </div>
     </div>
 
