--- a/index.html
+++ b/index.html
@@ -48,49 +48,47 @@
         </ul>
     </div>
   </nav>
-   
-<!-- Carousel -->
-<div id="schoolCarousel" class="carousel slide mt-auto" data-bs-ride="carousel" data-bs-interval="8000">
+  <!-- Carousel -->
+<div id="schoolCarousel" class="carousel slide carousel-fade mt-auto" data-bs-ride="carousel" data-bs-interval="8000">
     <div class="carousel-inner">
         <!-- First Slide with Brief Introduction -->
         <div class="carousel-item active">
             <img src="students.jfif" class="d-block w-100" alt="School Image 1">
-            <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
+            <div class="carousel-caption d-flex flex-column justify-content-end align-items-center bg-transparent pb-4">
                 <h5>IMAM HAFSIN MODEL INTERNATIONAL SCHOOL</h5>
                 <p class="text-light bg-transparent px-3 py-2">
                     Imam Hafsin Model International School offers quality education in Western Education, Islamiyya, and Tahfizz, guided by experienced directors. Our mission is to nurture future leaders through a balance of modern and traditional learning.
                 </p>
-                
             </div>
         </div>
         <!-- Second Slide for Western Education -->
         <div class="carousel-item">
             <img src="students.jfif" class="d-block w-100" alt="Western Education Image">
-            <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
+            <div class="carousel-caption d-flex flex-column justify-content-end align-items-center bg-transparent pb-4">
                 <h5>WESTERN EDUCATION</h5>
                 <p class="text-light bg-transparent px-3 py-2">
                     Committed to shaping well-rounded individuals, we provide students with a blend of modern education and essential life skills. Through a supportive environment, we aim to nurture their intellectual, personal, and social growth, preparing them to succeed in a dynamic world.
-                </p>                
+                </p>
             </div>
         </div>
         <!-- Third Slide for Islamiyya -->
         <div class="carousel-item">
             <img src="team.jfif" class="d-block w-100" alt="School Image 2">
-            <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
+            <div class="carousel-caption d-flex flex-column justify-content-end align-items-center bg-transparent pb-4">
                 <h2>ISLAMIYYAH</h2>
                 <p class="text-light bg-transparent px-3 py-2">
                     Providing a solid foundation in Islamic studies, we focus on nurturing spiritual growth, ethical values, and deep understanding of religious principles. Our approach combines traditional teachings with modern methods to inspire a lifelong commitment to faith and moral excellence.
-                </p>                
+                </p>
             </div>
         </div>
         <!-- Fourth Slide for Tahfizz -->
         <div class="carousel-item">
             <img src="students.jfif" class="d-block w-100" alt="School Image 3">
-            <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
+            <div class="carousel-caption d-flex flex-column justify-content-end align-items-center bg-transparent pb-4">
                 <h2>TAHFIZ</h2>
                 <p class="text-light bg-transparent px-3 py-2">
-                    Our Tahfizz section is dedicated to the memorization and recitation of the Holy Quran. Students in this program are provided with a structured and supportive environment to help them memorize the Quran and build a strong foundation in Islamic teachings. The program is designed to nurture spiritual growth and instill a deep understanding of the Quranic teachings, ensuring that each student has the tools to become a hafiz in the future.
-                </p>                
+                    Our Tahfizz section is dedicated to the memorization and recitation of the Holy Quran. Students in this program are provided with a structured and supportive environment to help them memorize the Quran and build a strong foundation in Islamic teachings.
+                </p>
             </div>
         </div>
     </div>
