--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </ul>
     </div>
   </nav>
-  <!-- Carousel -->
+ <!-- Carousel -->
 <div id="schoolCarousel" class="carousel slide carousel-fade mt-auto" data-bs-ride="carousel" data-bs-interval="8000">
     <div class="carousel-inner">
         <!-- First Slide with Brief Introduction -->
@@ -93,6 +93,32 @@
         </div>
     </div>
 </div>
+
+<!-- School Overview Section -->
+<div class="containers my-5">
+    <h2 class="section-title text-center">Imam Hafsin Model International School</h2>
+    <p class="text-center">
+        Established in 2014, Imam Hafsin Model International School is a registered institution offering quality education in 
+        <strong>Western Education, Islamiyya, and Tahfiz.</strong> The school is certified by the Ministry of Education, Kano State, and accredited by <strong>CAC, WAEC, and NECO.</strong> 
+        With a student population growing from 20 to over 307, we are committed to excellence in both academic and moral education.
+    </p>
+    <div class="text-center">
+        <a href="about.html" class="btn btn-primary mt-3 px-4">Explore More</a>
+    </div>
+</div>
+
+<!-- User Role Selection Section -->
+<div class="container-fluid my-5 text-center">
+    <h3 class="mb-3">Login to Access Your Information</h3>
+    <p class="text-muted">Please select your role to log in and access the relevant resources, such as viewing your child's results, managing results, and managing users:</p>
+    <div class="d-flex justify-content-center gap-3">
+        <!-- Login options for parent/student, staff, and admin -->
+        <a href="studentLogin.html" class="btn btn-primary px-4">Parent/Student Login</a>
+        <a href="login.html" class="btn btn-success px-4">Staff Login</a>
+        <a href="admin-login.html" class="btn btn-warning px-4">Admin Login</a>
+    </div>
+</div>
+
 
 <section id="who-we-are" class="containers text-center mt-3">
     <h2 class="text-info text-center bg-light  py-1">Who We Are</h2>
