--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
 
 <!-- School Overview Section -->
 <div class="containers my-5">
-    <h2 class="section-title text-center">Imam Hafsin Model International School</h2>
+    <h2 class="section-title text-center text-info bg-light">About Us and Your Access to Resources</h2>
     <p class="text-center">
         Established in 2014, Imam Hafsin Model International School is a registered institution offering quality education in 
         <strong>Western Education, Islamiyya, and Tahfiz.</strong> The school is certified by the Ministry of Education, Kano State, and accredited by <strong>CAC, WAEC, and NECO.</strong> 
         With a student population growing from 20 to over 307, we are committed to excellence in both academic and moral education.
     </p>
     <div class="text-center">
-        <a href="about.html" class="btn btn-primary mt-3 px-4">Explore More</a>
+        <a href="about.html" class="btn btn-info mt-3 px-4">Explore More</a>
     </div>
 </div>
 
