--- a/about.html
+++ b/about.html
@@ -6,86 +6,130 @@
   <title>About Us - Imam Hafsin Model International School</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css"> 
 </head>
    <body>
-   <!-- First Navbar -->
-   <nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
-    <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
-    <span class="navbar-brand mx-auto text-dark">Imam&nbsp;&nbsp;Hafsin</span>
-    <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
-  </nav>
-  
-  <!-- Second Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
-    <div class="navbar-toggler" type="button" onclick="toggleNavbar()">
-        <span class="navbar-toggler-icon"></span>
-    </div>
-    <button class="cancel-btn" style="display:none;" onclick="toggleNavbar()">×</button>
-    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link text-danger" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-danger" href="about.html">About</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link text-danger dropdown-toggle" href="#" id="loginDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="padding-right: 0;">
-                  Login
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="loginDropdown">
-                  <li><a class="dropdown-item" href="admin-login.html">Admin</a></li>
-                  <li><a class="dropdown-item" href="login.html">Staff</a></li>
-                  <li><a class="dropdown-item" href="studentLogin.html">Student</a></li>
-                </ul>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-danger" href="contact.html">Contact</a>
-            </li>
-        </ul>
-    </div>
-  </nav>
-   
+    <!-- First Navbar -->
+<nav class="navbar navbar-light bg-info text-dark fixed-top first-navbar">
+  <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
+  <span class="navbar-brand-name text-white">IMAM HAFSIN</span>
+  <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
+  <!--RC:1320997-->
+</nav>
+
+<!-- Second Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-white text-dark second-navbar">
+  <div class="navbar-toggler" type="button" onclick="toggleNavbar()">
+      <span class="navbar-toggler-icon"></span>
+  </div>
+  <button class="cancel-btn" style="display:none;" onclick="toggleNavbar()">×</button>
+  <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="nav-link text-danger" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link text-danger" href="about.html">About</a>
+          </li>
+          <li class="nav-item dropdown">
+              <a class="nav-link text-danger dropdown-toggle" href="#" id="loginDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="padding-right: 0;">
+                Login
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="loginDropdown">
+                <li><a class="dropdown-item" href="admin-login.html">Admin</a></li>
+                <li><a class="dropdown-item" href="login.html">Staff</a></li>
+                <li><a class="dropdown-item" href="studentLogin.html">Student</a></li>
+              </ul>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link text-danger" href="contact.html">Contact</a>
+          </li>
+      </ul>
+  </div>
+</nav>
   <!-- Hero Section -->
   <div class="hero-section text-center py-5 bg-primary text-white">
-    <h1>Imam Hafsin Model International School</h1>
+    <h4>Imam Hafsin Model International School</h4>
     <p>Where Knowledge Meets Excellence</p>
   </div>
+<!-- History of the School -->
+<div class="container-fluid my-5">
+  <h2 class="section-title text-center text-info mb-4">Our History</h2>
+  <p class="text-justify lead">
+    <strong>Imam Hafsin Model International School</strong> is a private, registered institution that has been a beacon of knowledge since its establishment in 2014. Certified by the <strong>Ministry of Education, Kano State</strong>, and accredited by respected bodies such as the <strong>Nigerian Corporate Affairs Commission (CAC)</strong>, the school is also registered for <strong>WAEC</strong> and <strong>NECO</strong> examinations, ensuring the highest standards in education. What started as a humble institution with only 20 students has grown significantly, now serving over 307 students, a testament to the trust and confidence the community has placed in the school’s educational approach.
+  </p>
+  
+  <p class="text-justify">
+    The school operates with a unique and holistic educational structure that integrates both spiritual and academic growth. The curriculum is divided into three major departments: the <strong>Tahfeez Section</strong>, the <strong>Islamiyya and Arabic Department</strong>, and the <strong>Western Education Department</strong>, each offering distinct yet complementary programs designed to nurture students spiritually, intellectually, and socially.
+  </p>
+  
+  <p class="text-justify">
+    The <strong>Tahfeez Section</strong> offers students the opportunity to memorize the Holy Quran while gaining deep understanding and appreciation of its teachings. This section emphasizes not only the memorization of Quranic verses but also their interpretation, strengthening the students' spiritual foundation.
+  </p>
+  
+  <p class="text-justify">
+    The <strong>Islamiyya and Arabic Department</strong> is dedicated to enriching students' understanding of Islamic studies, including Fiqh (Islamic jurisprudence), Tafseer (Quranic interpretation), and proficiency in the Arabic language. This department ensures that students develop a deep connection with their cultural and religious heritage, equipping them with the tools to read, write, and speak Arabic fluently.
+  </p>
+  
+  <p class="text-justify">
+    The <strong>Western Education Department</strong> focuses on academic excellence, offering both <strong>Science</strong> and <strong>Arts</strong> subjects that foster critical thinking, creativity, and problem-solving skills. With subjects ranging from Physics, Chemistry, and Biology to Literature, History, and Geography, this department ensures that students are well-prepared for the challenges of the modern world.
+  </p>
+  
+  <p class="text-justify">
+    In its continuous effort to support the community, the school is introducing an <strong>Adult Education Program</strong> that focuses on literacy and vocational training. This program will cover areas such as <strong>ICT</strong>, <strong>Tailoring</strong>, and other technical skills, helping adults gain qualifications and skills for better job prospects. Additionally, the school is enhancing its entrepreneurial focus by offering training in various trades, preparing both students and adults for self-employment and business opportunities.
+  </p>
+  
+  <p class="text-justify">
+    The school day is carefully structured to maintain a balance between academics, spirituality, and extracurricular activities. The <strong>Western Education</strong> classes run in the morning, followed by <strong>Islamiyya</strong> in the afternoon, while the <strong>Tahfeez</strong> classes take place on weekends. This schedule provides students with a well-rounded education that nurtures both their academic and spiritual growth.
+  </p>
+  
+  <p class="text-justify">
+    Imam Hafsin Model International School operates from <strong>7:30 AM to 5:30 PM</strong>, allowing students to engage deeply in their studies and extracurricular activities. This structure accommodates the diverse needs of students in both the <strong>Western Education</strong> and <strong>Islamiyya</strong> programs, with flexibility for the weekend <strong>Tahfeez</strong> section.
+  </p>
+  
+  <p class="text-justify">
+    As we look to the future, Imam Hafsin Model International School remains committed to continuing its tradition of excellence. With plans to expand further, including the addition of more facilities and programs, the school is determined to offer its students an education that goes beyond textbooks, preparing them to lead successful and meaningful lives in their communities and the world.
+  </p>
 
-  <!-- History of the School -->
-  <div class="container my-5">
-    <h2 class="section-title text-center">Our History</h2>
-    <p class="text-justify">
-      <strong>Imam Hafsin Model International School</strong> is a private, registered institution certified by the Ministry of Education, Kano State. Established in 2014, the school also holds accreditation from the Nigerian Corporate Affairs Commission <strong>(CAC)</strong> and is registered for <strong>WAEC</strong> and <strong>NECO</strong>. The student population has grown from 20 in 2014 to over 307 today. Our school comprises three departments:
-    </p>
-    <ul>
-      <li><strong>Tahfeez Section</strong></li>
-      <li><strong>Islamiyya and Arabic Department</strong></li>
-      <li><strong>Western Education Department</strong>: Offering both Science and Arts education.</li>
-    </ul>
-  </div>
+  <h4 class="text-center text-info mt-5">Our Mission</h4>
+  <p class="text-justify">
+    Our mission is to provide an education that balances academic excellence with Islamic values. We strive to develop responsible and knowledgeable individuals who are equipped with the skills and moral compass necessary to succeed in life and contribute positively to society.
+  </p>
+
+  <h4 class="text-center text-info mt-4">Our Vision</h4>
+  <p class="text-justify">
+    We envision a future where students from Imam Hafsin Model International School emerge as confident, educated, and God-fearing individuals, capable of leading and serving their communities with wisdom, integrity, and compassion.
+  </p>
+</div>
+
 
   <!-- Leadership Section -->
   <div class="container-fluid my- bg-light">
     <h2 class="section-title text-center">Meet Our Leadership</h2>
     <div class="row text-center">
-      <div class="col-md-4">
+      <div class="col-md-3">
         <img src="auwal1.jfif" alt="Director of Western Education" class="profile-pic rounded-circle">
         <h5>Mal Auwal Muhammad</h5>
         <p>Director of Western Education</p>
         <p>Mr. Auwal is an experienced educator with a Master's degree in Education, dedicated to academic excellence.</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <img src="passport.jpg" alt="Director of Tahfeez Section" class="profile-pic rounded-circle">
         <h5>Mal Salihu Hashim</h5>
         <p>Director of Tahfeez Section</p>
         <p>Expert in Quranic memorization, Mal Salihu has trained numerous Hafiz excelling in their studies.</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <img src="shamsu.jpg" alt="Director of Islamiyya Section" class="profile-pic rounded-circle">
         <h5>Mal Usman Said Isa</h5>
         <p>Director of Islamiyya Section</p>
+        <p>Dedicated to Islamic education, Mal Usman fosters a deep understanding of Islamic principles.</p>
+      </div>
+      <div class="col-md-3">
+        <img src="auwal1.jfif" alt="Director of Islamiyya Section" class="profile-pic rounded-circle">
+        <h5>Mr. LIman</h5>
+        <p>Student Affairs</p>
         <p>Dedicated to Islamic education, Mal Usman fosters a deep understanding of Islamic principles.</p>
       </div>
     </div>
@@ -131,51 +175,59 @@
     </div>
   </div>
 <!-- Footer -->
-<div class="footer bg-light mt-5">
-    <div class="row text-center py-3">
-        <div class="col-md-4">
-            <p><strong>Imam Hafsin Model International School</strong></p>
-            <p>No.60 Sani Yakasai Street</p>
-            <p>Tal'udu G/Kaya, Gwale LGA</p>
-            <p>Kano State</p>
-            <p>
-              <i class="fas fa-envelope"></i> 
-              <a href="mailto:imamhafsin@gmail.com">imamhafsin@gmail.com</a>
-            </p>
-            <p>
-              <i class="fas fa-phone"></i> 
-              <a href="tel:08142458654">08142458654</a>
-            </p>
-          </div>
-      <div class="col-md-4">
-        <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="d-block mb-2">
-          <i class="fab fa-facebook"></i> Facebook
-        </a>
-        <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="d-block mb-2">
-          <i class="fab fa-instagram"></i> Instagram
-        </a>
-        <a href="https://twitter.com/prof_johndoe" target="_blank" class="d-block mb-2">
-          <i class="fab fa-twitter"></i> Twitter
-        </a>
-        <a href="https://wa.me/1234567890" target="_blank" class="d-block mb-2">
-          <i class="fab fa-whatsapp"></i> WhatsApp
-        </a>
+<footer class="footer bg-info text-dark mt-5 py-3">
+  <div class="container">
+      <div class="text-center mb-2">
+          <h6 class="mb-1">Dedicated to Excellence in Education</h6>
+          <p class="small mb-2">Join us in providing quality education that shapes tomorrow's leaders.</p>
       </div>
-      <div class="col-md-4">
-        <p>&copy; IHMIS & SAFS Technologies 2025</p>
-        <p>All rights reserved.</p>
-      </div>
-    </div>
   </div>
+
+  <div class="row text-center">
+      <div class="col-md-4">
+          <h6 class="mb-1">Call Us</h6>
+          <p class="small mb-0"><i class="fas fa-phone"></i> <a href="tel:08142458654" class="text-light">08142458654</a></p>
+      </div>
+      <div class="col-md-4">
+          <h6 class="mb-1">Email Us</h6>
+          <p class="small mb-0 text-dark"><i class="fas fa-envelope"></i> <a href="mailto:info@imamhafsin.com.ng" class="text-light">info@imamhafsin.com.ng</a></p>
+      </div>
+      <div class="col-md-4">
+          <h6 class="mb-1">Visit Us</h6>
+          <p class="small mb-0 text-white">Imam Hafsin Model International School</p>
+          <p class="small mb-0 text-white">No.60 Sani Yakasai Street, Tal'udu G/Kaya, Gwale LGA</p>
+          <p class="small mb-0 text-white">Kano State, Nigeria</p>
+      </div>
+  </div>
+
+  <div class="social-icons text-center mt-2">
+      <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="text-dark me-2" aria-label="Facebook">
+          <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="text-dark me-2" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://twitter.com/prof_johndoe" target="_blank" class="text-dark me-2" aria-label="Twitter">
+          <i class="fab fa-twitter"></i>
+      </a>
+      <a href="https://wa.me/1234567890" target="_blank" class="text-dark" aria-label="WhatsApp">
+          <i class="fab fa-whatsapp"></i>
+      </a>
+  </div>
+
+  <div class="text-center mt-2">
+      <p class="small mb-0">&copy; IHMIS & SAFS Technologies 2025. All rights reserved.</p>
+  </div>
+
   <!-- Back to top button -->
   <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
-  
+</footer>
   <!-- Scripts -->
-  <script src="login.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+  <script src="login.js"></script>
 </body>
   </html>
   
