--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <!-- First Navbar -->
 <nav class="navbar navbar-light bg-info text-dark fixed-top first-navbar">
   <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
-  <span class="navbar-brand-name text-white">IMAM HAFSIN</span>
+  <span class="navbar-brand-name text-white">ABOUT IMAM HAFSIN</span>
   <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
   <!--RC:1320997-->
 </nav>
