--- a/about.html
+++ b/about.html
@@ -127,11 +127,11 @@
         <p>Dedicated to Islamic education, Mal Usman fosters a deep understanding of Islamic principles.</p>
       </div>
       <div class="col-md-3">
-        <img src="auwal1.jfif" alt="Director of Islamiyya Section" class="profile-pic rounded-circle">
-        <h5>Mr. LIman</h5>
+        <img src="auwal1.jfif" alt="Mr. Liman - Student Affairs" class="profile-pic rounded-circle">
+        <h5>Mr. Liman</h5>
         <p>Student Affairs</p>
-        <p>Dedicated to Islamic education, Mal Usman fosters a deep understanding of Islamic principles.</p>
-      </div>
+        <p>Mr. Liman is responsible for overseeing student well-being, ensuring a supportive environment for academic and personal growth, and fostering a sense of community within the school.</p>
+      </div>      
     </div>
   </div>
 
