--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
                     <p>Kano State</p>
                     <p>
                         <i class="fas fa-envelope"></i> 
-                        <a href="mailto:imamhafsin@gmail.com">imamhafsin@gmail.com</a>
+                        <a href="mailto:info@imamhafsin.com.ng">info@imamhafsin.com.ng</a>
                       </p>
                       <p>
                         <i class="fas fa-phone"></i> 
