--- a/admin-login.html
+++ b/admin-login.html
@@ -6,17 +6,20 @@
   <title>Admin Login</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
  
 </head>
 <body>
   
    <!-- First Navbar -->
-   <nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
-    <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
-    <span class="navbar-brand mx-auto text-dark">Imam&nbsp;&nbsp;Hafsin</span>
-    <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
-  </nav>
+<nav class="navbar navbar-light bg-info text-dark fixed-top first-navbar">
+  <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
+  <span class="navbar-brand-name text-white">ADMIN-LOGIN</span>
+  <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
+  <!--RC:1320997-->
+</nav>
+
   
   <!-- Second Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
@@ -51,7 +54,7 @@
    
   <div class="container">
     <form action="/adminLogin" method="POST" class="border p-4 shadow-sm rounded">
-      <div class="card-header text-center">
+      <div class="card-header text-center bg-info text-white">
         Admin Login
       </div>
       <div class="card-body">
@@ -72,41 +75,58 @@
 </div>
 </div>
  <!-- Footer -->
- <div class="footer bg-light mt-5">
-  <div class="row text-center py-3">
-    <div class="col-md-4">
-      <p><strong>Imam Hafsin Model International School</strong></p>
-      <p>622, Yakasai Street, Tal'udu G/Kaya</p>
-      <p>Email: imamhafsin@gmail.com</p>
-      <p>Phone: 08030999939939399</p>
-    </div>
-    <div class="col-md-4">
-      <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="d-block mb-2">
-        <i class="fab fa-facebook"></i> Facebook
-      </a>
-      <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="d-block mb-2">
-        <i class="fab fa-instagram"></i> Instagram
-      </a>
-      <a href="https://twitter.com/prof_johndoe" target="_blank" class="d-block mb-2">
-        <i class="fab fa-twitter"></i> Twitter
-      </a>
-      <a href="https://wa.me/1234567890" target="_blank" class="d-block mb-2">
-        <i class="fab fa-whatsapp"></i> WhatsApp
-      </a>
-    </div>
-    <div class="col-md-4">
-      <p>&copy; IHMIS 2024</p>
-      <p>All rights reserved.</p>
-    </div>
+ <footer class="footer bg-info text-dark mt-5 py-3">
+  <div class="container">
+      <div class="text-center mb-2">
+          <h6 class="mb-1">Dedicated to Excellence in Education</h6>
+          <p class="small mb-2">Join us in providing quality education that shapes tomorrow's leaders.</p>
+      </div>
   </div>
-</div>
-<!-- Back to top button -->
-<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
 
-   <!-- Bootstrap JS, Popper.js, and jQuery -->
-   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <div class="row text-center">
+      <div class="col-md-4">
+          <h6 class="mb-1">Call Us</h6>
+          <p class="small mb-0"><i class="fas fa-phone"></i> <a href="tel:08142458654" class="text-light">08142458654</a></p>
+      </div>
+      <div class="col-md-4">
+          <h6 class="mb-1">Email Us</h6>
+          <p class="small mb-0 text-dark"><i class="fas fa-envelope"></i> <a href="mailto:info@imamhafsin.com.ng" class="text-light">info@imamhafsin.com.ng</a></p>
+      </div>
+      <div class="col-md-4">
+          <h6 class="mb-1">Visit Us</h6>
+          <p class="small mb-0 text-white">Imam Hafsin Model International School</p>
+          <p class="small mb-0 text-white">No.60 Sani Yakasai Street, Tal'udu G/Kaya, Gwale LGA</p>
+          <p class="small mb-0 text-white">Kano State, Nigeria</p>
+      </div>
+  </div>
+
+  <div class="social-icons text-center mt-2">
+      <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="text-dark me-2" aria-label="Facebook">
+          <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="text-dark me-2" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://twitter.com/prof_johndoe" target="_blank" class="text-dark me-2" aria-label="Twitter">
+          <i class="fab fa-twitter"></i>
+      </a>
+      <a href="https://wa.me/1234567890" target="_blank" class="text-dark" aria-label="WhatsApp">
+          <i class="fab fa-whatsapp"></i>
+      </a>
+  </div>
+
+  <div class="text-center mt-2">
+      <p class="small mb-0">&copy; IHMIS & SAFS Technologies 2025. All rights reserved.</p>
+  </div>
+
+  <!-- Back to top button -->
+  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
+</footer>
+  <!-- Scripts -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
    <script src="adminLogin.js"></script>
  </body>
  </html>
