--- a/edit.html
+++ b/edit.html
@@ -8,21 +8,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate" />
+     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<!-- First Navbar (Images and Admin Dashboard Text) -->
-<nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
-    <!-- Left image (Education Cap) -->
+<!-- First Navbar -->
+<nav class="navbar navbar-light bg-info text-dark fixed-top first-navbar">
     <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
-    
-    <!-- Navbar brand (Admin Dashboard text) centered -->
-    <span class="navbar-brand mx-auto text-dark">Students&nbsp;&nbsp;Management</span>
-    
-    <!-- Right image logo -->
+    <span class="navbar-brand-name text-white">Edit Student</span>
     <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
+    <!--RC:1320997-->
   </nav>
   
   <!-- Second Navbar (Navbar Items) -->
