--- a/edit.html
+++ b/edit.html
@@ -9,8 +9,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate" />
      <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <link rel="stylesheet" href="style.css">
@@ -61,9 +59,9 @@
             <!-- Populate this dropdown with classes dynamically -->
         </select>
     </div>
-
-    <button id="view-students" type="button" class="btn btn-success w-100">View Students</button>
-
+  <div class="text-center">
+    <button id="view-students" type="button" class="btn btn-success">View Students</button>
+    </div>
   <!-- New button to go back to class selection -->
 <div class="row mt-3">
     <div class="col-6" id="back-to-selection" style="display:none;">
