--- a/edit.html
+++ b/edit.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Students</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate" />
-     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <link rel="stylesheet" href="style.css">
-</head>
 <body>
 <!-- First Navbar -->
 <nav class="navbar navbar-light bg-info text-dark fixed-top first-navbar">
@@ -59,9 +58,9 @@
             <!-- Populate this dropdown with classes dynamically -->
         </select>
     </div>
-  <div class="text-center">
+<div class="text-center">
     <button id="view-students" type="button" class="btn btn-success">View Students</button>
-    </div>
+</div>
   <!-- New button to go back to class selection -->
 <div class="row mt-3">
     <div class="col-6" id="back-to-selection" style="display:none;">
@@ -328,7 +327,7 @@
 </div></div><br>
 
 <br><br>
-<!-- Footer -->
+ <!-- Footer -->
  <footer class="footer bg-info text-dark mt-5 py-3">
     <div class="container">
         <div class="text-center mb-2">
@@ -376,11 +375,11 @@
     <!-- Back to top button -->
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
   </footer>
-    <!-- Scripts -->
-    <script src="edit.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+      <!-- Bootstrap JS, Popper.js, and jQuery -->
+   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+ <script src="edit.js"></script>
+</body>
+</html>
 </body>
 </html>
