--- a/sessionResult.html
+++ b/sessionResult.html
@@ -141,6 +141,7 @@
         <p class="small mb-0">&copy; IHMIS & SAFS Technologies 2025. All rights reserved.</p>
     </div>
 </footer>
+<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
 
 <!-- Bootstrap and JS Libraries -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
