--- a/staff_management.html
+++ b/staff_management.html
@@ -6,20 +6,17 @@
     <title>Management Control Panel</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <link rel="stylesheet" href="staff_management.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <!-- First Navbar (Images and Admin Dashboard Text) -->
-<nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
-    <!-- Left image (Education Cap) -->
+      <!-- First Navbar -->
+<nav class="navbar navbar-light bg-info text-dark fixed-top first-navbar">
     <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
-    
-    <!-- Navbar brand (Admin Dashboard text) centered -->
-    <span class="navbar-brand mx-auto text-dark">Management&nbsp;&nbsp;Cpanel</span>
-    
-    <!-- Right image logo -->
+    <span class="navbar-brand-name text-white">Staff Management</span>
     <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
+    <!--RC:1320997-->
   </nav>
   
   <!-- Second Navbar (Navbar Items) -->
@@ -49,16 +46,10 @@
         </ul>
     </div>
   </nav>
-    <div class="container mt-auto">
-        <div class="row justify-content-center">
-            <div class="col-lg-6 col-md-8 col-sm-12">
-                <div class="card">
-                    <div class="card-header text-center">
-                        <h3>Management Control Panel</h3>
-                    </div>
-                    <div class="card-body">
-
-    <!-- Login Form for Admin -->
+  <div class="container mt-5">
+    <div class="text-center bg-info p-3">
+        <h3 class="mb-4">Management Control Panel</h3>
+    </div>
     <div id="loginSection">
         <h2 class="text-center">Authorized Admin</h2>
         <form id="adminLoginForm">
@@ -70,12 +61,16 @@
                 <label for="adminPassword">Password</label>
                 <input type="password" class="form-control" id="adminPassword" required>
             </div>
-            <button type="submit" class="btn btn-success btn-block">Login</button>
+            <div class="text-center">
+            <button type="submit" class="btn btn-success">Login</button>
+            </div>
         </form>
     </div>
+
+
     <!-- Success Alert -->
     <div id="successMessage" class="alert alert-success" style="display: none;"></div>
-
+<br>
 <!-- Staff Management Section -->
 <div id="staffManagementSection">
     <div class="search-container" style="width: 100%; max-width: 350px; margin: 0 auto;">
@@ -417,42 +412,60 @@
     </div>
 </div>
 </div>
-
+</div>
 
 </div>
 </div>
 </div></div></div><br><br><br>
  <!-- Footer -->
- <div class="footer bg-light mt-5">
-    <div class="row text-center py-3">
-      <div class="col-md-4">
-        <p><strong>Imam Hafsin Model International School</strong></p>
-        <p>622, Yakasai Street, Tal'udu G/Kaya</p>
-        <p>Email: imamhafsin@gmail.com</p>
-        <p>Phone: 08030999939939399</p>
-      </div>
-      <div class="col-md-4">
-        <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="d-block mb-2">
-          <i class="fab fa-facebook"></i> Facebook
-        </a>
-        <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="d-block mb-2">
-          <i class="fab fa-instagram"></i> Instagram
-        </a>
-        <a href="https://twitter.com/prof_johndoe" target="_blank" class="d-block mb-2">
-          <i class="fab fa-twitter"></i> Twitter
-        </a>
-        <a href="https://wa.me/1234567890" target="_blank" class="d-block mb-2">
-          <i class="fab fa-whatsapp"></i> WhatsApp
-        </a>
-      </div>
-      <div class="col-md-4">
-        <p>&copy; IHMIS 2024</p>
-        <p>All rights reserved.</p>
-      </div>
+ <footer class="footer bg-info text-dark mt-5 py-3">
+    <div class="container">
+        <div class="text-center mb-2">
+            <h6 class="mb-1">Dedicated to Excellence in Education</h6>
+            <p class="small mb-2">Join us in providing quality education that shapes tomorrow's leaders.</p>
+        </div>
     </div>
-  </div>
-  <!-- Back to top button -->
-  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
+  
+    <div class="row text-center">
+        <div class="col-md-4">
+            <h6 class="mb-1">Call Us</h6>
+            <p class="small mb-0"><i class="fas fa-phone"></i> <a href="tel:08142458654" class="text-light">08142458654</a></p>
+        </div>
+        <div class="col-md-4">
+            <h6 class="mb-1">Email Us</h6>
+            <p class="small mb-0 text-dark"><i class="fas fa-envelope"></i> <a href="mailto:info@imamhafsin.com.ng" class="text-light">info@imamhafsin.com.ng</a></p>
+        </div>
+        <div class="col-md-4">
+            <h6 class="mb-1">Visit Us</h6>
+            <p class="small mb-0 text-white">Imam Hafsin Model International School</p>
+            <p class="small mb-0 text-white">No.60 Sani Yakasai Street, Tal'udu G/Kaya, Gwale LGA</p>
+            <p class="small mb-0 text-white">Kano State, Nigeria</p>
+        </div>
+    </div>
+  
+    <div class="social-icons text-center mt-2">
+        <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="text-dark me-2" aria-label="Facebook">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="text-dark me-2" aria-label="Instagram">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://twitter.com/prof_johndoe" target="_blank" class="text-dark me-2" aria-label="Twitter">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://wa.me/1234567890" target="_blank" class="text-dark" aria-label="WhatsApp">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </div>
+  
+    <div class="text-center mt-2">
+        <p class="small mb-0">&copy; IHMIS & SAFS Technologies 2025. All rights reserved.</p>
+    </div>
+</footer>
+  
+    <!-- Back to top button -->
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="staff_management.js"></script>
